--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,14 @@
   font-family: 'comico-regular';
   src: url(./fonts/comico-regular.otf);
 }
+@font-face{
+  font-family: 'chillax-variable';
+  src: url(./fonts/chillax-variable.ttf);
+}
+@font-face{
+  font-family: 'chillax-medium';
+  src: url(./fonts/chillax-medium.otf);
+}
 * {
   margin: 0;
   padding: 0;
@@ -74,7 +82,12 @@ html, body {
   letter-spacing: 2px;
 }
 
+
 .nav-links a:hover {
+  color: rgb(209, 135, 206);
+}
+
+.nav-links a.active{
   color: rgb(209, 135, 206);
 }
 
@@ -94,6 +107,7 @@ html, body {
   background-position: center;
   margin-bottom: 20px;
   margin-left: 2%;
+  margin-right: 2%;
   padding-top: 40px;
   background-repeat: no-repeat;
   opacity: 0;
@@ -118,6 +132,9 @@ h2{
   letter-spacing: 3px;
   font-size: xx-large;
   margin-bottom: 3%;
+}
+p{
+  font-family:'chillax-variable';
 }
 
 .section.about {
